todo-application/todo-frontend/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app-svc
      port: 80

  - matches:
      - path:
          type: PathPrefix
          value: /todos
    backendRefs:
      - name: todo-backend-svc
        port: 80
